--- a/_sass/layout/_notices.scss
+++ b/_sass/layout/_notices.scss
@@ -81,7 +81,7 @@
   margin: 2em 0 !important;
   padding: 1em 1.5em;
   font-family: $global-font-family;
-  font-size: 0.9em;
+  font-size: 1em;
   text-indent: initial;
   background-color: #ffffff;
   border: 1px solid #cccccc;
