--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -13,6 +13,10 @@
   @include clearfix();
   margin-bottom: 1em;
 
+  @media (max-width: 768px) {
+    display: none;
+  }
+
   @media (orientation: portrait) {
     margin-top: 1em;
   }
